🔄 change: update site domain from mannustack.dev to mannustack.com
Updated 4 files:
- hugo.toml: baseURL and images URL
- CNAME: GitHub Pages custom domain
- .github/workflows/hugo.yaml: commented baseURL reference

All mannustack.dev references now point to mannustack.com
Site builds successfully with new domain

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://mannustack.dev/'
+baseURL = 'https://mannustack.com/'
 languageCode = 'en-us'
 title = "Mannu's Stack - Technology Leadership & Innovation"
 theme = 'PaperMod'
@@ -26,7 +26,7 @@ env = "production"
 title = "Mannu's Stack"
 keywords = ["technology leadership", "enterprise architecture", "digital transformation", "innovation", "Kyndryl", "IBM", "engineering management", "automation", "cloud platforms"]
 author = "Mannu Silva"
-images = ["https://mannustack.dev/images/og-image.png"]
+images = ["https://mannustack.com/images/og-image.png"]
 DateFormat = "January 2, 2006"
 defaultTheme = "auto"
 disableThemeToggle = false
